# genie-platform

./: .gitignore  ARCHITECTURE.md  INTERFACE_FIRST_CHANGELOG.md  README.md  WATCHLIST.md  WORKING_MODEL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: ENGINEERING_CHECKLIST.md
docs/adr/: 0001-architecture-independence.md
docs/architecture/: MIGRATION_PHASES.md  STRUCTURE_BLUEPRINT.md  TARGET_ARCHITECTURE.md
src/genie/: main.py
src/genie/app/: bootstrap.py  container.py  lifecycle.py
src/genie/application/facade/: __init__.py  application_facade.py
src/genie/application/interfaces/: __init__.py  chat_service.py  session_service.py  task_service.py
src/genie/application/query_engine/: query_engine.py
src/genie/application/task_orchestrator/: task_orchestrator.py
src/genie/dev/: architecture_check.py  doctor.py
src/genie/domain/ports/: task_port.py  tool_port.py
src/genie/infrastructure/server/: __init__.py  http_server.py  server_edge.py
src/genie/presentation/viewmodels/: main_view_model.py
src/genie/presentation/views/: main_window.py
src/genie/runtime/event_bus/: event_bus.py
src/genie/runtime/feature_flags/: feature_flags.py
src/genie/runtime/tasks/: registry.py
src/genie/runtime/tools/: registry.py
src/genie/shared/config/: settings.py
tests/contract/: test_bootstrap_boundary.py  test_container_edge_boundary.py  test_main_entrypoint_boundary.py  test_server_edge_interface_boundary.py  test_viewmodel_interface_boundary.py
tests/unit/: test_registries.py
