[project]
name = "genie-platform"
version = "0.1.0"
description = "Neutralisierte, objektorientierte PySide6-Architektur für BeastwareTeam"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "mypy>=1.10",
  "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
